--- a/birthdays.html
+++ b/birthdays.html
@@ -4,83 +4,105 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Birthdays - ימי הולדת</title>
+    <link rel="stylesheet" href="styles.css">
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
     <style>
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        .birthdays-page {
             min-height: 100vh;
-            padding: 20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .container {
-            background: white;
-            border-radius: 20px;
-            padding: 40px;
-            max-width: 900px;
-            width: 100%;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
-        }
-
-        h1 {
-            text-align: center;
-            color: #667eea;
-            margin-bottom: 30px;
-            font-size: 2.5em;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            padding: 40px 20px;
         }
 
         .back-button {
-            display: inline-block;
-            margin-bottom: 20px;
-            padding: 10px 20px;
-            background-color: #667eea;
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+            margin-bottom: 30px;
+            padding: 12px 24px;
+            background-color: rgba(255, 255, 255, 0.2);
             color: white;
             text-decoration: none;
-            border-radius: 10px;
-            transition: background-color 0.3s;
+            border-radius: 25px;
+            font-weight: 600;
+            transition: all 0.3s;
+            backdrop-filter: blur(10px);
         }
 
         .back-button:hover {
-            background-color: #5568d3;
+            background-color: rgba(255, 255, 255, 0.3);
+            transform: translateX(5px);
+        }
+
+        .birthdays-container {
+            background: white;
+            border-radius: 20px;
+            padding: 40px;
+            max-width: 1200px;
+            margin: 0 auto;
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+        }
+
+        .birthdays-title {
+            text-align: center;
+            color: var(--primary-color);
+            margin-bottom: 40px;
+            font-size: 2.5em;
+            font-family: 'Montserrat', sans-serif;
         }
 
         .birthday-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-            gap: 20px;
-            margin-top: 20px;
+            grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+            gap: 25px;
+            margin-top: 30px;
         }
 
         .birthday-card {
             background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
             border-radius: 15px;
-            padding: 20px;
+            padding: 25px;
             color: white;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s, box-shadow 0.3s;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         .birthday-card:hover {
-            transform: translateY(-5px);
+            transform: translateY(-8px);
             box-shadow: 0 8px 25px rgba(0, 0, 0, 0.3);
+        }
+
+        .birthday-emoji {
+            font-size: 3em;
+            margin-bottom: 15px;
         }
 
         .birthday-card h2 {
             font-size: 1.8em;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
+            color: white;
         }
 
         .birthday-info {
             font-size: 1.1em;
-            line-height: 1.8;
+            line-height: 2;
+            width: 100%;
+            text-align: center;
+        }
+
+        .birthday-info .info-row {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 8px;
+            margin: 8px 0;
         }
 
         .birthday-info .label {
@@ -88,18 +110,12 @@
             opacity: 0.9;
         }
 
-        .birthday-emoji {
-            font-size: 2em;
-            text-align: center;
-            margin-bottom: 10px;
-        }
-
         @media (max-width: 768px) {
-            .container {
+            .birthdays-container {
                 padding: 20px;
             }
 
-            h1 {
+            .birthdays-title {
                 font-size: 2em;
             }
 
@@ -110,10 +126,16 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="index.html" class="back-button">← חזרה לעמוד הראשי</a>
-        <h1>🎂 ימי הולדת 🎉</h1>
-        <div id="birthdaysContainer" class="birthday-grid"></div>
+    <div class="birthdays-page">
+        <div class="container">
+            <a href="index.html" class="back-button">
+                <i class="fas fa-arrow-right"></i> חזרה לעמוד הראשי
+            </a>
+            <div class="birthdays-container">
+                <h1 class="birthdays-title">🎂 ימי הולדת 🎉</h1>
+                <div id="birthdaysContainer" class="birthday-grid"></div>
+            </div>
+        </div>
     </div>
 
     <script>
@@ -160,9 +182,18 @@
                         <div class="birthday-emoji">🎈</div>
                         <h2>${person.name}</h2>
                         <div class="birthday-info">
-                            <div><span class="label">תאריך:</span> ${date}</div>
-                            <div><span class="label">גיל נוכחי:</span> ${age}</div>
-                            <div><span class="label">שנת לידה:</span> ${person.birthYear}</div>
+                            <div class="info-row">
+                                <i class="fas fa-calendar-alt"></i>
+                                <span><span class="label">תאריך:</span> ${date}</span>
+                            </div>
+                            <div class="info-row">
+                                <i class="fas fa-birthday-cake"></i>
+                                <span><span class="label">גיל נוכחי:</span> ${age}</span>
+                            </div>
+                            <div class="info-row">
+                                <i class="fas fa-star"></i>
+                                <span><span class="label">שנת לידה:</span> ${person.birthYear}</span>
+                            </div>
                         </div>
                     </div>
                 `;
